# betterbeads

./: .gitattributes  .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
.betterbeads/: config.json  history.jsonl
.claude/: settings.json
.claude-plugin/: plugin.json
.ght/: history.jsonl
betterbeads/: __init__.py  cli.py  config.py  gh.py  history.py  models.py  parser.py  project.py
docs/adr/: 001-ght-design.md
hooks/: hooks.json  session-start.md  session-stop.md
scripts/: log-hook-event.py  organize_permissions.py  session_issues.py  session_stop.py
skills/betterbeads/: SKILL.md
